# bratly

./: .gitlab-ci.yml  README.md  README_uv.md  make_docs.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/demo/: toy_example.ann  toy_example.txt
data/demo/ann/: myannfile2.ann  myannfile3.ann  myannfile4.ann
data/demo/both/: myannfile.ann  myannfile.txt  myannfile2.ann  myannfile4.ann  myannfile5.txt
data/demo/eval/test2/txt/: test1.ann  test1.txt
data/demo/eval/test2/xxx/: test1.txt
data/demo/eval/test3/eval/: eval_folder_agreement_report.csv  eval_folder_muc_table.txt
data/demo/eval/test3/medina/: 2001030646.ann  2001030646.txt  2001061111.ann  2001061111.txt  2001071208.ann  2001071208.txt  2001091824.ann  2001091824.txt  2001101605.ann  2001101605.txt  2001110206.ann  2001110206.txt  2001142158.ann  2001142158.txt  2001150425.ann  2001150425.txt  2001160820.ann  2001160820.txt  2001161100.ann  2001161100.txt  2001162100.ann  2001162100.txt  2001170253.ann  2001170253.txt  2001171600.ann  2001171600.txt  2001181019.ann  2001181019.txt  2001181105.ann  2001181105.txt  2001200137.ann  2001200137.txt  2001211521.ann  2001211521.txt  2001220247.ann  2001220247.txt  2001230555.ann  2001230555.txt  2001231937.ann  2001231937.txt  (+476 more)
data/demo/eval/test3/tmp/: 2001030646.ann  2001030646.txt  2001061111.ann  2001061111.txt  2001071208.ann  2001071208.txt  2001091824.ann  2001091824.txt  2001101605.ann  2001101605.txt  2001110206.ann  2001110206.txt  2001142158.ann  2001142158.txt  2001150425.ann  2001150425.txt  2001160820.ann  2001160820.txt  2001161100.ann  2001161100.txt  2001162100.ann  2001162100.txt  2001170253.ann  2001170253.txt  2001171600.ann  2001171600.txt  2001181019.ann  2001181019.txt  2001181105.ann  2001181105.txt  2001200137.ann  2001200137.txt  2001211521.ann  2001211521.txt  2001220247.ann  2001220247.txt  2001230555.ann  2001230555.txt  (+477 more)
data/demo/eval_results/: _agreement_report.csv  _agreement_report.xlsx  _muc_table.txt
data/demo/txt/: myannfile.txt  myannfile2.txt  myannfile3.txt  noannfile.txt
dockerfiles/: ruff.pyproject.toml
dockerfiles/ci-images/uv/: Dockerfile
dockerfiles/zsh_additions/: basic_aliases.zsh  git.zsh  qol.zsh  uv.zsh
dockerfiles/zsh_additions/statics/: gitlab-ci.yml
dockerfiles/zsh_additions/statics/gitignores/: misc.gitignore  python.gitignore
src_devs/bratly_dev/: pyproject.toml
src_devs/bratly_dev/src/bratly_dev/: __init__.py
src_devs/bratly_eval_dev/: pyproject.toml
src_devs/bratly_eval_dev/src/bratly_eval_dev/: __init__.py
src_devs/bratly_eval_dev/src/bratly_eval_dev/notebooks/: demo.ipynb
src_devs/bratly_io_fs_dev/: pyproject.toml
src_devs/bratly_io_fs_dev/src/bratly_io_fs_dev/: __init__.py  duplicate_dataset_with_specific_annotations.py  io_performances.py
src_libs/bratly/: pyproject.toml
src_libs/bratly-eval/: pyproject.toml
src_libs/bratly-io-fs/: pyproject.toml
src_libs/bratly/src/bratly/: annotation_types.py  collection_types.py
src_libs/bratly_eval/: pyproject.toml
src_libs/bratly_eval/src/bratly_eval/: __init__.py  agreement_types.py
src_libs/bratly_io_fs/: pyproject.toml
src_libs/bratly_io_fs/src/bratly_io_fs/: ann_write_src.py  file_read_src.py
(+3 files in other folders)
