[project]
name = "bratly-dev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = ["bratly"]

[project.scripts]
bratly-dev = "bratly_dev:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9"]
build-backend = "uv_build"

[tool.uv.sources]
bratly = { workspace = true }
