[project]
name = "bratly-eval-dev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bratly",
    "bratly-eval",
    "bratly-io-fs",
    "ipykernel>=6.29.5",
]

[project.scripts]
bratly-eval-dev = "bratly_eval_dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
bratly-eval = { workspace = true }
bratly = { workspace = true }
bratly-io-fs = { workspace = true }
