[project]
name = "bratly-io-fs-dev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = ["bratly", "bratly-io-fs"]

[project.scripts]
bratly-io-fs-dev = "bratly_io_fs_dev:main"
bratly-io-performance = "bratly_io_fs_dev.io_performances:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9"]
build-backend = "uv_build"

[tool.uv.sources]
bratly = { workspace = true }
bratly-io-fs = { workspace = true }
